--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "graphql": "^15.5.1",
+    "@reduxjs/toolkit": "^1.6.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "urql": "^2.0.4"
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "eslint": "7.29.0",
