--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@reduxjs/toolkit": "^1.6.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "redux-saga": "^1.1.3"
+    "react-redux": "^7.2.4",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "7.29.0",
