--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "react-redux": "^7.2.4",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0"
-
+  },
+  "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
