--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@reduxjs/toolkit": "^1.6.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux-observable": "^2.0.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
