--- a/package.json
+++ b/package.json
@@ -4,5 +4,17 @@
   "main": "index.js",
   "repository": "https://github.com/ivaylo9512/note-app-full-mode-react",
   "author": "ivaylo9512 <ivayloaleksandrov@yahoo.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@babel/runtime": "^7.16.3"
+  }
 }
