--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "author": "ivaylo9512 <ivayloaleksandrov@yahoo.com>",
   "license": "MIT",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
+    "bootstrap": "5.1.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-bootstrap": "^2.0.3",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux-observable": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -18,6 +23,7 @@
     "@babel/runtime": "^7.16.3",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.20",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "babel-loader": "^8.2.3",
